<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:key="@string/pref_all_videos"
        app:defaultValue="@bool/show_all_videos"
        android:summary="@string/pref_description_trailers_only"
        android:title="@string/pref_title_trailers_only" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_low_hd"
        android:entries="@array/pref_quality_list"
        android:entryValues="@array/pref_video_quality_values"
        android:key="@string/pref_video_quality"
        android:title="@string/pref_title_video_quality"
        />


    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null"-->
</PreferenceScreen>
